--- a/app/templates/analyze_video/index.html
+++ b/app/templates/analyze_video/index.html
@@ -59,7 +59,7 @@
                                 Shorts
                             </button>
                         </div>
-                        <div class="view-toggle">
+                        <div class="view-toggle" id="sortToggle">
                             <button class="toggle-btn active" onclick="switchSortBy('relevance')" id="relevanceSortBtn">
                                 <i class="ph ph-star"></i>
                                 Relevance
